# RometeSensing_Rag

./: .env.example  .gitignore  README.md  md5.text  pyproject.toml  requirements.txt
agent/: tool_context.py  tools.py
backend/app/: main.py
backend/app/api/: chat.py  chats.py  documents.py  rag.py
backend/app/db/: session.py
backend/app/schemas/: common.py  rag.py
chroma_db/: chroma.sqlite3
config/: chroma.yml  rag.yml
data/: 示例遥感知识.txt
docs/: frontend_backend_api_doc.md  learning_guide.md  remote_sense_rag_project_plan.md
frontend/: streamlit_app.py
model/: factory.py
prompts/: agent_system_prompt.txt  rag_summarize.txt
rag/: rag_service.py  reranker.py  vector_store.py
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
