[project]
name = "remotes-exercise"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.47.0",
    "python-multipart==0.0.28",
    "pydantic==2.13.4",
    "streamlit==1.57.0",
    "requests==2.34.2",
    "langchain==1.3.1",
    "langchain-community==0.4.1",
    "langchain-chroma==1.1.0",
    "langchain-text-splitters==1.1.2",
    "langchain-core==1.4.0",
    "dashscope==1.25.18",
    "chromadb==1.5.9",
    "pypdf==6.11.0",
    "PyYAML==6.0.3",
    "sqlalchemy==2.0.49",
    "aiomysql==0.3.2",
    "protobuf==3.20.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
